<resources>
    <string name="accessories_package">配件套餐</string>
    <string name="account_recievee_title_statistic">会员-我的-地址账户管理</string>
    <string name="account_safe">账户安全</string>
    <string name="account_security_score">账户安全得分</string>
    <string name="act_about_score">意见反馈</string>
    <string name="act_address_district_in">所在地区：</string>
    <string name="act_address_manager_address">所在地区</string>
    <string name="act_address_manager_address_detail">详细地址</string>
    <string name="act_address_manager_address_detail_hint">请输入详细地址</string>
    <string name="act_address_manager_name">收货人</string>
    <string name="act_address_manager_name_hint">请输入中文姓名</string>
    <string name="act_address_manager_phone">手机号码</string>
    <string name="act_address_manager_phone_hint">请输入收货人手机号码</string>
    <string name="act_address_manager_zipcode">邮政编码</string>
    <string name="act_address_manager_zipcode_hint">请输入邮政编码</string>
    <string name="act_and">和</string>
    <string name="act_barcode_clear_the_scan_history">是否删除所选内容？</string>
    <string name="act_barcode_history_after">前</string>
    <string name="act_barcode_history_cancle">取消</string>
    <string name="act_barcode_history_choice">选择</string>
    <string name="act_barcode_history_clear_all">全部清空</string>
    <string name="act_barcode_history_context_name">二维码内容</string>
    <string name="act_barcode_history_copy">复制</string>
    <string name="act_barcode_history_hour">小时</string>
    <string name="act_barcode_history_minute">分钟</string>
    <string name="act_barcode_history_now">刚刚</string>
    <string name="act_barcode_history_outer_net">即将前往外部网页,可能有安全隐患,您是否继续访问？</string>
    <string name="act_barcode_history_page_title">扫一扫-扫描记录</string>
    <string name="act_barcode_history_suning_name">苏宁红孩子网址</string>
    <string name="act_barlogon_error_tip1">二维码尚未被扫描或者已被确认授权</string>
    <string name="act_barlogon_error_tip2">二维码已失效请重新扫描</string>
    <string name="act_barlogon_error_tip3">二维码已被扫描,等待授权</string>
    <string name="act_barlogon_error_tip4">二维码已失效，请重新扫描</string>
    <string name="act_cart1_empty_btn_login">去逛逛</string>
    <string name="act_cart1_empty_btn_logout">登录</string>
    <string name="act_cart1_empty_msg_login">偶遇总有无限惊喜，一起</string>
    <string name="act_cart1_empty_msg_logout">如您已添加过商品，登录后查看</string>
    <string name="act_cart1_include_freight">含运费</string>
    <string name="act_cart1_load_fail">很遗憾，加载没有成功哎！</string>
    <string name="act_cart1_load_retry">重试</string>
    <string name="act_cart1_network_error">网络好像不大给力哦，检查一下网络再试吧！</string>
    <string name="act_cart1_no_freight">免运费</string>
    <string name="act_cart1_select_all">全选</string>
    <string name="act_cart2_add_card">+添加新卡</string>
    <string name="act_cart2_add_card_success">添加苏宁卡成功</string>
    <string name="act_cart2_add_coupon">+添加券</string>
    <string name="act_cart2_add_discount_fail">添加优惠失败</string>
    <string name="act_cart2_add_discount_success">添加优惠成功</string>
    <string name="act_cart2_card_add">添加苏宁卡</string>
    <string name="act_cart2_card_input_emtpy">请输入苏宁卡卡号</string>
    <string name="act_cart2_confirm">确定</string>
    <string name="act_cart2_coupon">优惠券</string>
    <string name="act_cart2_coupon_add">添加优惠券</string>
    <string name="act_cart2_coupon_has_pay">券全额支付</string>
    <string name="act_cart2_coupon_input_emtpy">请输入优惠券券号</string>
    <string name="act_cart2_cshop_delivery">由商家配送</string>
    <string name="act_cart2_cshop_has_remark">点此查看留言</string>
    <string name="act_cart2_cshop_remark">点此给商家留言</string>
    <string name="act_cart2_discount_amount">已优惠%s元</string>
    <string name="act_cart2_energy_sub">参加节能补贴</string>
    <string name="act_cart2_error_btn_right">返回</string>
    <string name="act_cart2_error_btn_right1">移除并继续购买</string>
    <string name="act_cart2_error_default">抱歉，系统遇到一点小问题，请您再试一次</string>
    <string name="act_cart2_error_title1">以下商品无货或售</string>
    <string name="act_cart2_error_title2">以下商品在此地无货或暂不销售</string>
    <string name="act_cart2_gif_card">苏宁卡</string>
    <string name="act_cart2_has_energy_sub">已参加节能补贴</string>
    <string name="act_cart2_hint_input_card_num">请输入卡号</string>
    <string name="act_cart2_hint_input_card_prompt">苏宁卡已经添加，请确认后重新输入</string>
    <string name="act_cart2_hint_input_card_pwd">请输入苏宁卡密码</string>
    <string name="act_cart2_hint_input_coupon_num">请输入券号</string>
    <string name="act_cart2_hint_input_coupon_pwd">如果有密码，请输入券密码</string>
    <string name="act_cart2_hint_udl_verification">请输入短信验证码</string>
    <string name="act_cart2_id_number">身份证号码:</string>
    <string name="act_cart2_id_number_hint">请填写收货人身份证号码</string>
    <string name="act_cart2_id_number_pay_id_number">请输入您的身份证号</string>
    <string name="act_cart2_id_number_pay_name">请填写真实姓名</string>
    <string name="act_cart2_id_number_promise">红孩子承诺证信息将加密保管，绝不对外泄露</string>
    <string name="act_cart2_id_number_prompt">请正确填写身份信息，否则商品有被扣关风险</string>
    <string name="act_cart2_id_number_title">填写身份信息</string>
    <string name="act_cart2_illegal_id_number">身份证号码不正确</string>
    <string name="act_cart2_illegal_name">请输入2-12位汉字！</string>
    <string name="act_cart2_invoice_info">发票信息</string>
    <string name="act_cart2_no_card_hint">"没有可使用的苏宁卡
您可以添加新卡"</string>
    <string name="act_cart2_opm_num">共%s件</string>
    <string name="act_cart2_opm_pnum">%s件</string>
    <string name="act_cart2_pay_cod">货到付款-现金</string>
    <string name="act_cart2_pay_cod_detial">商品送达时，您可以通过现金支付</string>
    <string name="act_cart2_pay_interest">免息</string>
    <string name="act_cart2_pay_model">支付方式</string>
    <string name="act_cart2_pay_online">在线支付</string>
    <string name="act_cart2_pay_online_desc">支持快捷、网银、余额等多种支付方式</string>
    <string name="act_cart2_pay_online_others">在线支付-找人代付</string>
    <string name="act_cart2_pay_periods">分%s期</string>
    <string name="act_cart2_pay_periods_text">任性付分期</string>
    <string name="act_cart2_pay_pod">货到付款-刷卡</string>
    <string name="act_cart2_pay_pod_detial">商品送达时，您可以通过刷卡支付</string>
    <string name="act_cart2_pay_scan">货到付款-扫码</string>
    <string name="act_cart2_pay_scan_detial">送货上门后再收款，可以使用扫码支付</string>
    <string name="act_cart2_pay_scan_ship">货到付款-苏宁金融扫码</string>
    <string name="act_cart2_pay_scan_ship_detial">送货上门后使用苏宁金融客户端扫码支付</string>
    <string name="act_cart2_pay_sdk_canceled">您的订单已提交成功，如果暂不支付，可去订单中心再次支付！</string>
    <string name="act_cart2_pay_store">门店付款</string>
    <string name="act_cart2_pay_store_desc_pick">1、待货物到达门店2、收到短信通知3、前往门店支付并提货</string>
    <string name="act_cart2_pay_store_desc_ship">1、提交订单后24小时内前往任一附近门店付款2、苏宁安排物流发货3、等待配送上门</string>
    <string name="act_cart2_pay_store_pick">注：商品送达后请您前往下单时选择的自提门店进行付款并提货，准确送达时间将短信通知您，商品送达门店7天后若仍未支付订单将自动取消</string>
    <string name="act_cart2_pay_store_ship">注：您的订单已提交成功，请24小时内前往附近任意门店收银台处支付，支付完成后将及时为您发货</string>
    <string name="act_cart2_pick_delivery">商品自提</string>
    <string name="act_cart2_pick_receiver">提货人</string>
    <string name="act_cart2_pick_receiver_hint">请输入提货人姓名</string>
    <string name="act_cart2_pick_receiver_num_hint">请输入提货人手机号码</string>
    <string name="act_cart2_product_list_page_title">商品清单</string>
    <string name="act_cart2_product_list_title">购物流程-购物-购物车2商品清单</string>
    <string name="act_cart2_product_num">共%s件</string>
    <string name="act_cart2_query_vat_fail">查询增值税发票认证失败</string>
    <string name="act_cart2_rmb_prefix">¥%s</string>
    <string name="act_cart2_set_default_address">设置为默认地址</string>
    <string name="act_cart2_settle_info">确认订单</string>
    <string name="act_cart2_ship_address_hint">请输入街道、小区等</string>
    <string name="act_cart2_ship_receiver_hint">请输入姓名</string>
    <string name="act_cart2_sn_cshop_delivery">由苏宁配送+商家配送</string>
    <string name="act_cart2_sn_cshop_remark">点此查看送货时间,给商家留言</string>
    <string name="act_cart2_sn_delivery">由苏宁配送</string>
    <string name="act_cart2_sn_time">点此查看送货时间</string>
    <string name="act_cart2_support_energy_sub">点此参加节能补贴,查看送货时间</string>
    <string name="act_cart2_update_area_confirm">立即补充</string>
    <string name="act_cart2_update_area_title">您的收获地址不完整</string>
    <string name="act_cart2_use_discount_card_group">仅限购买苏宁自营商品，一次最多可使用90张卡</string>
    <string name="act_cart2_use_discount_card_group_cshop">您所选择的店铺商品暂不可使用苏宁卡</string>
    <string name="act_cart2_validity_date">有效期:%s</string>
    <string name="act_cart2_validity_end">有效期至:%s</string>
    <string name="act_cart2_vat_title">增值税发票认证</string>
    <string name="act_cart2_vft_has_sendto">已发送验证码到%s</string>
    <string name="act_cart2_vft_input_msg">为保证您的账户安全，请输入验证码</string>
    <string name="act_cart2_vft_not_bind">账户未绑定手机，请去苏宁易购网站绑定手机</string>
    <string name="act_cart2_vft_not_bind_reason">未绑定账号不能使用苏宁卡</string>
    <string name="act_cart2_vft_tips">验证码一天最多只能获取5次，每一次获取到的验证码可以在8小时内连续使用</string>
    <string name="act_cart2_vtf_sms_pattern">苏宁红孩子</string>
    <string name="act_cart3_pay_need_epay_active">您的易付宝账户尚未激活，请至电脑端激活后支付。</string>
    <string name="act_cart_noactiviy_statistic_title">购物流程-购物车-活动已结束推荐</string>
    <string name="act_cart_nostock_page_title">商品卖完了</string>
    <string name="act_cart_nostock_recommend1">非常抱歉，您选的商品瞬间被抢完了</string>
    <string name="act_cart_nostock_recommend2">推荐您看看</string>
    <string name="act_cart_nostock_sales">%s人已购买</string>
    <string name="act_cart_nostock_statistic_title">购物流程-购物车-无货推荐</string>
    <string name="act_chat_leave_merchants">商家</string>
    <string name="act_commotity_graphics_name_eight">看了又看</string>
    <string name="act_commotity_graphics_name_five">商品参数</string>
    <string name="act_commotity_graphics_name_four">自定义模块</string>
    <string name="act_commotity_graphics_name_one">优惠券</string>
    <string name="act_commotity_graphics_name_seven">售后服务</string>
    <string name="act_commotity_graphics_name_six">包装清单</string>
    <string name="act_commotity_graphics_name_three">商品图片</string>
    <string name="act_commotity_graphics_name_two">卖家推荐</string>
    <string name="act_commotity_lianyin">936超市联营</string>
    <string name="act_commotity_weather_autumn">风衣</string>
    <string name="act_commotity_weather_spring">夹克</string>
    <string name="act_commotity_weather_sum">衬衫</string>
    <string name="act_commotity_weather_winter">羽绒服</string>
    <string name="act_consult_success_tips">发表咨询成功，请等待审核</string>
    <string name="act_coupon_bind_phone_failer">绑定联盟手机号失败！</string>
    <string name="act_cpacps_smscode_day_restrict">一个手机号每天只有三次获取验证机会</string>
    <string name="act_cpacps_smscode_default_failed_msg">发送验证码失败</string>
    <string name="act_cpacps_smscode_duration_restrict">一个IP十五分钟之内只有三次获取验证码机会</string>
    <string name="act_cpacps_smscode_hint">请输入短信验证码</string>
    <string name="act_cpacps_smscode_request_failed">验证码请求失败</string>
    <string name="act_cpacps_smscode_send_failed">发送短信验证码失败</string>
    <string name="act_cpacps_smscode_success">发送验证码成功</string>
    <string name="act_crop_image_saving">正在保存照片…</string>
    <string name="act_crop_image_wait">请稍后…</string>
    <string name="act_dot">、</string>
    <string name="act_gather_babyname_vali_format">宝妈~宝名必须由中文、英文、数字、-和_组成哦~</string>
    <string name="act_gather_babyname_vali_length">宝妈~宝名不能超过20个字哦~</string>
    <string name="act_gather_babyname_vali_null">宝妈~宝名还没填哦~</string>
    <string name="act_gather_local_to_server_fail">本地数据上传失败</string>
    <string name="act_goods_detail_added_cart_similarity">已加入购物车，您可能还需要这些</string>
    <string name="act_goods_detail_anonymous">匿名</string>
    <string name="act_goods_detail_balance_time">付尾款时间</string>
    <string name="act_goods_detail_balance_time_end">距付尾款结束</string>
    <string name="act_goods_detail_better_prices">(比电脑买优惠</string>
    <string name="app_name">红孩子母婴</string>
    <string name="cart2_self_pickup_address">自提地址</string>
    <string name="shoppingcart_choose_ship_area_prompt">请点击选择送货区域</string>
    <string name="shoppingcart_new_address_save">保存并使用</string>
    <string name="shoppingcart_self_pickup_choose_prompt">请选择自提地址</string>
</resources>